# WikiAnalyser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WikiAnalyser.rc  website.dsp
UserData/: data.ini
Website/Src/pages/: wikiAnalyser.html.h
Website/Src/styles/: wikiAnalyser.css.h
include/: GUI.h  LINUXGUI.h  WINGUI.h  article.h  cleanup.h  config.h  curl.h  fileLoader.h  funcStructs.h  graphGUI.h  mainGUI.h  parser.h  topN.h  unwanted.h  welcomeGUI.h
include/core/: article.h  articleParser.h  cleanup.h  unwanted.h
rawZigForC/: build_zig.h  build_zig_zon.h  zig_main.h  zig_root.h
src/: GUI.c  LINUXGUI.c  WINGUI.c  article.c  cleanup.c  config.c  curl.c  fileLoader.c  graphGUI.c  main.c  mainGUI.c  parser.c  parser.cpp  topN.c  unwanted.c  welcomeGUI.c
src/core/: article.c  articleParser.c  cleanup.c  unwanted.c
zig/: build.zig  build.zig.zon
zig/src/: main.zig  root.zig
